# rags-to-riches

./: .gitignore  README.md  pyproject.toml
src/rags/: cache.py  cli.py  github.py  gui.py  search.py  tui.py  web.py
src/rags/templates/: index.html
