[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rags-to-riches"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "urllib3<2",
    "rich>=13.0",
]

[project.scripts]
rags = "rags.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
